<resources>
    <string name="app_name">Android Examples</string>
    <string name="another_views">Another Views</string>
    <string name="send_email">Send E-mail</string>
    <string name="send_sms">Send SMS</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="select_image">Select Image</string>
    <string name="select_video">Select Video</string>
    <string name="open_web_site">Open Web Site</string>
    <string name="maps_lat_long">Maps - Latitude and Longitude</string>
    <string name="maps_route">Maps - Route</string>
    <string name="pick_image">Pick Image </string>
    <string name="pick_video">Pick Video</string>
    <string name="maps_address">Maps - Address</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="view_all_contacts">View All Contacts</string>
    <string name="call_number">Call Number</string>
    <string name="dial_number">Dial Number</string>
    <string name="dialog_download">Downloading image</string>
    <string name="dialog_wait">Wait a moment...</string>
    <string name="gridview">GridView</string>
    <string name="context_action_bar">Context ActionBar</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="zoom">Zoom</string>
    <string name="title_example">Title Example </string>
    <string name="summary_example">Summary Example </string>
    <string name="search_view">Search View with Filterable</string>
    <string name="reveal_effect">Reveal Effect</string>
    <string name="task_already_started">Task already started</string>
    <string name="task_not_started">Task not yet started</string>
    <string name="task_already_finished">Task already finished</string>
    <string name="sliding_tab_layout">Sliding Tab Layout</string>
    <string name="xml_selectors">XML Selectors</string>
    <string name="collapsing_toolbar_layout">Collapsing Toolbar Layout</string>
    <string name="view_pager">ViewPager</string>
    <string name="this_is_snackbar">This is a SnackBar</string>
    <string name="preference_screen">Preference Screen</string>
    <string name="fab_with_snackbar">Floating Action Button with SnackBar</string>
    <string name="simple_view_pager">Simple ViewPager</string>
    <string name="view_pager_with_title">ViewPager + TitleStrip</string>
    <string name="intro_slider">Intro Slider</string>
    <string name="image_switcher">Image Switcher</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="palette">Palette</string>
    <string name="stand_alone_toolbar">Stand Alone Toolbar</string>
    <string name="loading_death_star">Loading Death Star...</string>
    <string name="rebel_base_reach">Rebel base within reach in 5 seconds</string>
    <string name="test_activity">Test Activity</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="view_animations">View Animations</string>
    <string name="flip">Flip</string>
    <string name="this_is_not_droid">This is not the droid you are looking for</string>
    <string name="activity_animations">Activity Animations</string>
    <string name="i_am_watermelon">I\'m a watermelon</string>
    <string name="extract_colors">Extract Colors</string>
    <string name="web_view_swipe_refresh">WebView with SwipeRefreshLayout</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_4">Tab 4</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="local_broadcast">Local Broadcast Receiver</string>
    <string name="notifications">Notifications</string>
    <string name="intents">Intents</string>
    <string name="static_broadcast">Static Broadcast Receiver</string>
    <string name="dynamic_broadcast">Dynamic Broadcast Receiver</string>
    <string name="actionbar_toolbar">ActionBar and Toolbar</string>
    <string name="gestures">Gestures</string>
    <string name="simple_notification">Simple Notification</string>
    <string name="heads_up_notification">Heads Up Notification</string>
    <string name="big_view_notification">Big View Notification</string>
    <string name="notification_with_action">Notification With Action</string>
    <string name="handler_async_task">Handler and Async Tasks</string>
    <string name="async_task">AsyncTask</string>
    <string name="handler_message">Handler Message</string>
    <string name="drawing_shapes">Drawing Shapes</string>
    <string name="draggable_view">Draggable View</string>
    <string name="zoomable_imageview">Zoomable ImageView</string>
    <string name="fragments">Fragments</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="click">Click</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="user">User</string>
    <string name="spinner_complete_check">Spinner, AutoComplete and CheckBox</string>
    <string name="save_instance_state">SaveInstanceState</string>
    <string name="rotation_type">Rotation Type</string>
    <string name="relative_to_object">Relative to object</string>
    <string name="relative_to_layout">Relative to layout</string>
    <string name="animations">Animations</string>
    <string name="animation_drawable">Animation Drawable</string>
    <string name="alpha">Alpha</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="animation_set">Animation Set</string>
    <string name="animation_listener">Animation Listener</string>
    <string name="view_flipper">View Flipper</string>
    <string name="view_animated">View Animated</string>
    <string name="animate">Animate</string>
    <string name="anim_layout_changes">Anim Layout Changes</string>
    <string name="drawable_animation">Drawable Animation</string>
    <string name="bug_example">Bug Example</string>
    <string name="type_angle">Type an angle</string>
    <string name="failed_download">Failed to download image</string>
    <string name="image_downloaded">Image has been downloaded</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="redownload_image">Re-download Image With Runnable</string>
    <string name="send_message_with_handler">Send message with Handler (3 seconds delay)</string>
    <string name="send_message_with_runnable">Send message with Runnable (3 seconds delay)</string>
    <string name="message_arrived">The Message Arrived!</string>
    <string name="animate_xml">Animate with XML</string>
    <string name="animate_api">Animate with API</string>
    <string name="value_more_zero">Value greater than zero required</string>
    <string name="reverse">Reverse</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got it</string>
    <string name="add_sw_frag">Add Star Wars Fragment</string>
    <string name="add_food_frag">Add Food Fragment</string>
    <string name="replace_animal_frag">Replace for Animal Frag</string>
    <string name="star_wars_frag">This is a Star Wars Fragment!</string>
    <string name="food_frag">This is a Food Fragment!</string>
    <string name="animal_frag">This is a Animal Fragment!</string>
    <string name="frag_not_added">was not added to the stack</string>
    <string name="frag_removed">has been removed from the stack</string>
    <string name="frag_icon_font">Icons source: iconsplace.com</string>
    <string name="remove_current_frag">Remove Current Fragment</string>
    <string name="remove_all_sw_frag">Remove All Star Wars Fragments</string>
    <string name="remove_all_food_frag">Remove All Food Fragments</string>
    <string name="remove_all_fragments">Remove All Fragments</string>
    <string name="animation_finished">The animation has finished</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="grid_manager_vertical">Vertical GridLayout</string>
    <string name="grid_manager_horizontal">Horizontal GridLayout</string>
    <string name="staggered_manager_horizontal">Horizontal StaggeredGrid</string>
    <string name="staggered_manager_vertical">Vertical StaggeredGrid</string>
    <string name="linear_manager_horizontal">Horizontal LinearLayout</string>
    <string name="linear_manager_vertical">Vertical LinearLayout</string>
    <string name="scale">Scale</string>
    <string name="slide_in_left">Slide In Left</string>
    <string name="slide_out_right">Slide Out Right</string>
    <string name="slide_right">Slide Right</string>
    <string name="slide_left">Slide Left</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="fade">Fade</string>
    <string name="ok">Ok</string>
    <string name="anim_not_loaded">Animate not loaded items only</string>
    <string name="recycle_settings">RecycleView Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="animation">Animation</string>
    <string name="layout_manager">Layout Manager</string>
    <string name="always_animate">Always Animate</string>
    <string name="none">None</string>
    <string name="scroll_to_see">Scroll To See Changes</string>
    <string name="no_results_for">No results for</string>
    <string name="share">Share</string>
    <string name="transition_key">anything</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
