<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_widgets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.androidexamples.app.activity.AnotherViewsActivity">
        <include layout="@layout/include_top_toolbar"/>

        <Button
            android:text="@string/drawing_shapes"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_drawing_shapes" />

        <Button
            android:text="@string/gridview"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_gridview" />

        <Button
            android:text="@string/image_switcher"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_image_switcher" />
        <Button
            android:text="@string/fab_with_snackbar"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_fab_with_snackbar" />
        <Button
            android:text="@string/recycler_view"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_recycler_view" />
        <Button
            android:text="@string/web_view_swipe_refresh"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_webview" />
        <Button
            android:text="@string/xml_selectors"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_xml_selectors" />
        <Button
            android:text="@string/spinner_complete_check"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_spinner_complete_check" />
    </LinearLayout>
</ScrollView>
