<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryText"
        android:text="@string/animation"/>
    <Spinner
        android:id="@+id/spinnerAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryText"
        android:text="@string/layout_manager"/>
    <Spinner
        android:id="@+id/spinnerLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/radioGroupSettings"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonAlways"
            android:layout_width="wrap_content"
            android:text="@string/always_animate"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radioButtonOnlyNotLoaded"
            android:text="@string/anim_not_loaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>