<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.marcos.androidexamples.app.activity.MainActivity">
    <include layout="@layout/toolbar" />

    <Button
        android:text="@string/animations"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_animations" />
    <Button
        android:text="@string/another_views"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_another_views" />
    <Button
        android:text="@string/fragments"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_fragments" />
    <Button
        android:text="@string/gestures"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_gestures" />
    <Button
        android:text="@string/save_instance_state"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_save_instance_state" />
    <Button
        android:text="@string/toolbar"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_toolbar" />
    <Button
        android:text="@string/view_pager"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_view_pager" />

</LinearLayout>
